# term4k_sub

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  uninstall.sh  update.sh
.github/badges/: build.json  heap-new.json  languages.json  loc.json  smart-factory.json  stack-objects.json  top-language.json  unit-tests.json
.github/workflows/: build.yml  ci-badges.yml  readme-stats.yml  unit-tests.yml
data/config/: charlie_settings.json
documents/: ARCHITECTURE.md  ARCHITECTURE_zh_CN.md  README_zh_CN.md
i18n/: en_US.json  zh_CN.json
packaging/: postinst  postinst_rpm
scripts/: do_refactor.py  update_readme_stats.py
shell/: install.sh
src/: main.cpp
src/account/: RecordStore.cpp  RecordStore.h  UserContext.cpp  UserContext.h  UserSession.cpp  UserSession.h  UserStore.cpp  UserStore.h
src/audio/: AudioPlayer.cpp  AudioPlayer.h
src/chart/: ChartCatalog.cpp  ChartCatalog.h  ChartFileReader.cpp  ChartFileReader.h
src/config/: AppDirs.cpp  AppDirs.h  RuntimeConfigs.cpp  RuntimeConfigs.h
src/dao/: ProofedRecordsDAO.cpp  ProofedRecordsDAO.h  UserAccountsDAO.cpp  UserAccountsDAO.h
src/data/: Chart.cpp  Chart.h  GameplayResult.cpp  GameplayResult.h  Rating.cpp  SettingsDraft.cpp  SettingsDraft.h
src/entities/: Chart.cpp  Chart.h  GameplayResult.cpp  Rating.cpp  Rating.h  SettingsDraft.h  User.cpp  User.h
src/gameplay/: GameplayChartParser.cpp  GameplayChartParser.h  GameplayClock.cpp  GameplayClock.h  GameplayRecordWriter.cpp  GameplayRecordWriter.h  GameplaySession.cpp  GameplaySession.h  GameplayStats.cpp  GameplayStats.h
src/instances/: AdminStatInstance.cpp  ChartListInstance.cpp  ChartListInstance.h  UserLoginInstance.cpp  UserLoginInstance.h  UserStatInstance.cpp
src/main/: main.cpp
src/main/config/: AppDirs.cpp  RuntimeConfigs.cpp  RuntimeConfigs.h
src/main/dao/: ProofedRecordsDAO.cpp  ProofedRecordsDAO.h  UserAccountsDAO.cpp  UserAccountsDAO.h
src/main/entities/: Chart.cpp  Chart.h  GameplayChartData.cpp  GameplayChartData.h  GameplayResult.cpp  GameplayResult.h  Rating.cpp  Rating.h  SettingsDraft.cpp  SettingsDraft.h  User.h
src/main/instances/: AdminStatInstance.cpp  AdminStatInstance.h  ChartListInstance.cpp  ChartListInstance.h  GameplayInstance.cpp  GameplayInstance.h  GameplaySettlementInstance.cpp  GameplaySettlementInstance.h  SettingsInstance.cpp  SettingsInstance.h  UserLoginInstance.cpp  UserLoginInstance.h  UserStatInstance.cpp  UserStatInstance.h
src/main/services/: AudioService.cpp  AudioService.h  AuthenticatedUserService.cpp  AuthenticatedUserService.h  ChartCatalogService.cpp  ChartCatalogService.h  ChartIOService.cpp  ChartIOService.h  GameplayChartService.cpp  GameplayChartService.h  GameplayClockService.cpp  GameplayClockService.h  GameplayRecordService.cpp  GameplayRecordService.h  GameplaySessionService.cpp  GameplaySessionService.h  GameplayStatsService.cpp  GameplayStatsService.h  I18nService.cpp  I18nService.h  SettingsService.cpp  SettingsService.h  ThemePresetService.cpp  ThemePresetService.h  UserLoginService.cpp  UserLoginService.h
src/main/ui/: AdminUserStatUI.cpp  AdminUserStatUI.h  ChartListUI.cpp  ChartListUI.h  ChartSelectUI.cpp  ChartSelectUI.h  GameplaySettlementUI.cpp  GameplaySettlementUI.h  GameplayUI.cpp  GameplayUI.h  HomePageUI.cpp  HomePageUI.h  LoadingUI.cpp  LoadingUI.h  LoginUI.cpp  LoginUI.h  MessageOverlay.cpp  MessageOverlay.h  README.md  RegisterUI.cpp  RegisterUI.h  SettingsUI.cpp  SettingsUI.h  StartMenuUI.cpp  StartMenuUI.h  ThemeAdapter.cpp  ThemeAdapter.h  UIBus.cpp  UIBus.h  UIColors.h  UIThreadRuntime.cpp  UIThreadRuntime.h  UserInfoUI.cpp  UserInfoUI.h  UserLoginUI.cpp  UserLoginUI.h  UserSettingsUI.cpp  UserSettingsUI.h  UserStatUI.cpp  UserStatUI.h
src/main/utils/: ErrorNotifier.cpp  ErrorNotifier.h  JsonUtils.cpp  JsonUtils.h  LiteDBUtils.cpp  LiteDBUtils.h  PrefixTrie.cpp  PrefixTrie.h  RatingUtils.h  StringUtils.h
src/models/: GameplaySettlementInstance.cpp  GameplaySettlementInstance.h
src/platform/: AppDirs.cpp  AppDirs.h  I18n.cpp  I18n.h  RuntimeConfig.cpp  RuntimeConfig.h  SettingsIO.cpp  SettingsIO.h  ThemeStore.cpp  ThemeStore.h
src/resources/i18n/: en_US.json  zh_CN.json
src/resources/themes/: flat-remix-light.json  paper.json  tokyo-night.json  tomorrow-night.json
src/scenes/: AdminStatScene.cpp  AdminStatScene.h  ChartListScene.cpp  ChartListScene.h  GameplaySettlement.cpp  GameplaySettlement.h  SettingsScene.cpp  SettingsScene.h  UserStatScene.cpp  UserStatScene.h
src/services/: AudioService.cpp  AudioService.h  AuthenticatedUserService.cpp  AuthenticatedUserService.h  ChartCatalogService.cpp  ChartCatalogService.h  ChartIOService.cpp  ChartIOService.h  GameplayChartService.cpp  GameplayClockService.cpp  GameplayRecordService.cpp  GameplaySessionService.cpp  GameplayStatsService.h  I18nService.cpp  I18nService.h  SettingsService.cpp  SettingsService.h  ThemePresetService.cpp  UserLoginService.cpp  UserLoginService.h
src/test/: TestSupport.h  test_main.cpp
src/ui/: ChartListUI.cpp  ChartListUI.h  ContextMenuOverlay.cpp  ContextMenuOverlay.h  CoverArtRenderer.cpp  CoverArtRenderer.h  GameplaySettlementUI.cpp  GameplaySettlementUI.h  GameplayUI.cpp  GameplayUI.h  IllustrationRenderer.cpp  IllustrationRenderer.h  MessageOverlay.cpp  SettingsUI.cpp  SettingsUI.h  StartMenuUI.cpp  TerminalImageProtocol.cpp  TerminalImageProtocol.h  ThemeAdapter.cpp  ThemeAdapter.h  TransitionBackdrop.cpp  TransitionBackdrop.h  UIBus.cpp  UIBus.h  UIColors.cpp  UserStatUI.cpp  UserStatUI.h
src/utils/: AppDirs.h  ErrorNotifier.cpp  ErrorNotifier.h  JsonUtils.cpp  JsonUtils.h  LiteDBUtils.h  PrefixTrie.h  RatingUtils.h
test/: TestSupport.h
test/unit/config/: RuntimeConfigsTests.cpp
test/unit/instances/: AdminStatInstanceTests.cpp  UserStatInstanceTests.cpp
test/unit/services/: ChartIOTests.cpp  I18nTests.cpp  UserServiceTests.cpp
test/unit/utils/: LiteDBUtilsTests.cpp
tests/: catch_amalgamated.hpp
tests/unit/account/: UserContextTests.cpp  UserSessionTests.cpp
tests/unit/audio/: AudioPlayerTests.cpp
tests/unit/chart/: ChartCatalogTests.cpp  (+1 more)
(+51 files in other folders)
